# ChangeLog for media-libs/libcddb
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/ChangeLog,v 1.48 2009/04/26 19:45:11 patrick Exp $

*libcddb-1.3.2 (26 Apr 2009)

  26 Apr 2009; Patrick Lauer <patrick@gentoo.org> +libcddb-1.3.2.ebuild:
  Bump to 1.3.2, fixes #266915

  11 May 2008; Diego Pettenò <flameeyes@gentoo.org>
  libcddb-1.3.0-r1.ebuild:
  Move doxygen to depend-only, closes bug #221675.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> libcddb-1.3.0-r1.ebuild:
  Stable for HPPA (bug #214767).

  27 Mar 2008; Raúl Porcel <armin76@gentoo.org> libcddb-1.3.0-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #214767

  26 Mar 2008; Markus Rothe <corsair@gentoo.org> libcddb-1.3.0-r1.ebuild:
  Stable on ppc64; bug #214767

  26 Mar 2008; Brent Baude <ranger@gentoo.org> libcddb-1.3.0-r1.ebuild:
  stable ppc, bug 214767

  22 Mar 2008; Samuli Suominen <drac@gentoo.org> libcddb-1.3.0-r1.ebuild:
  amd64 stable

*libcddb-1.3.0-r1 (13 Nov 2007)

  13 Nov 2007; Alexis Ballier <aballier@gentoo.org>
  +files/libcddb-1.3.0-asneeded-nonglibc.patch, +libcddb-1.3.0-r1.ebuild:
  add a patch to build with asneeded on non glibc systems

  02 Aug 2007; Raúl Porcel <armin76@gentoo.org> libcddb-1.3.0.ebuild:
  x86 stable

  20 Jun 2007; Raúl Porcel <armin76@gentoo.org> libcddb-1.3.0.ebuild:
  alpha stable wrt #168824

  28 Apr 2007; Markus Rothe <corsair@gentoo.org> libcddb-1.3.0.ebuild:
  Stable on ppc64; bug #166824

  28 Apr 2007; nixnut <nixnut@gentoo.org> libcddb-1.3.0.ebuild:
  Stable on ppc wrt bug 166824

  27 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> libcddb-1.3.0.ebuild:
  Stable on sparc wrt #166824

  27 Apr 2007; Raúl Porcel <armin76@gentoo.org> libcddb-1.3.0.ebuild:
  ia64 stable wrt #166824

  27 Apr 2007; Jeroen Roovers <jer@gentoo.org> libcddb-1.3.0.ebuild:
  Stable for HPPA (bug #166824).

  27 Apr 2007; Steve Dibb <beandog@gentoo.org> libcddb-1.3.0.ebuild:
  amd64 stable, bug 166824
