@@ -3,6 +3,6 @@ AUX libcddb-1.3.0-interix.patch 1067 RMD160 523b17c4f95a6d9b9c6541962d0cb8eb2f95
 DIST libcddb-1.3.0.tar.bz2 329319 RMD160 d34588f416ba80ececb23ffcff3312fc0b699f30 SHA1 171618045dfa75075c6ced446d25e88f2c7ca88a SHA256 4e7d3aae339cf5037d972cd5f3ab23a3b643f6b05e4125430da4f22682770bf9
 DIST libcddb-1.3.2.tar.bz2 352909 RMD160 e38ed8c7dd5a9b4a5b2a1772a9e98f914872c397 SHA1 2a7855918689692ff5ca3316d078a859d51959ce SHA256 35ce0ee1741ea38def304ddfe84a958901413aa829698357f0bee5bb8f0a223b
 EBUILD libcddb-1.3.0-r1.ebuild 1116 RMD160 9d1efb3b664264d64b01c9dddaf4e300e56a3d81 SHA1 e1f17ed3c24501299f4ec688233491f655179d97 SHA256 81b54049ebf93196a8ecf2b42096b771183fa97a89395f34377ab74b9e6617d8
-EBUILD libcddb-1.3.2.ebuild 1026 RMD160 c59cbd210fadafea7a8ce91906f89fb226961600 SHA1 ed761cef1903e56a16b0cf5d9e4d2cf125c62ffb SHA256 331aaf9dc271675dc5df9d3d0369fecebd5aa499661ddeead9bdd9653494d0fc
-MISC ChangeLog 5576 RMD160 26428a6d9c0118053decfe365597e401e79245c8 SHA1 471b680e6d7422b6ce4d211cacd33c7175fad05a SHA256 e9578b3bc4f64f7e1530e48c0739c30808412d0517d59861862483e9b24b1ea5
+EBUILD libcddb-1.3.2.ebuild 1076 RMD160 9d57adc803d83b3e98802226e2326d5a27066050 SHA1 72739fda58034392646002f2a98b55f19ef8c285 SHA256 f60a3ede885929c70618f684b3a1a9443207216f4800a8c631cfffaac2aaa98a
+MISC ChangeLog 5828 RMD160 00b7ece03d70f2deddc313d3636b8d28300bb102 SHA1 5e5c9d88a1998f7d0f42026c8b9decfd5a7dab44 SHA256 91a48da2ab1f46d5e98ed7fdb3c86d06cad131c27302056a203419e806cb50b5
 MISC metadata.xml 248 RMD160 05122080e3580393675ec87101f0eb48aba15ea5 SHA1 8f9b5d80a666c1f111e7a6e61c66a298ed67a408 SHA256 790cfd8d63ed9248363a7e773fd9bdad79266c4153368dceb5109a63b2a2aa8f
