@@ -1,8 +1,9 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/libcddb-1.3.2.ebuild,v 1.1 2009/04/26 19:45:11 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/libcddb-1.3.2.ebuild,v 1.3 2009/05/04 11:14:50 ssuominen Exp $
 
-EAPI="2"
+EAPI=2
+inherit libtool
 
 DESCRIPTION="A library for accessing a CDDB server"
 HOMEPAGE="http://libcddb.sourceforge.net"
@@ -11,17 +12,20 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x86-solaris"
-IUSE="doc +iconv"
+IUSE="doc"
+
+RDEPEND="virtual/libiconv"
+DEPEND="doc? ( app-doc/doxygen )"
 
 RESTRICT="test"
 
-RDEPEND=""
-DEPEND="doc? ( app-doc/doxygen )
-	iconv? ( virtual/libiconv )"
+src_prepare() {
+	# needed for sane .so versionning on FreeBSD
+	elibtoolize
+}
 
 src_configure() {
-	econf --without-cdio \
-		$(use_with iconv)
+	econf --without-cdio
 }
 
 src_compile() {
@@ -30,12 +34,12 @@ src_compile() {
 	# Create API docs if needed and possible
 	if use doc; then
 		cd doc
-		doxygen doxygen.conf || die "doxygen failed."
+		doxygen doxygen.conf || die "doxygen failed"
 	fi
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed."
+	emake DESTDIR="${D}" install || die "emake install failed"
 	dodoc AUTHORS ChangeLog NEWS README THANKS TODO
 
 	# Create API docs if needed and possible
