@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libcddb
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/ChangeLog,v 1.48 2009/04/26 19:45:11 patrick Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/ChangeLog,v 1.50 2009/05/04 11:14:50 ssuominen Exp $
+
+  04 May 2009; Samuli Suominen <ssuominen@gentoo.org> libcddb-1.3.2.ebuild:
+  Remove USE iconv wrt #268048, not everything deserves a USE flag.
+
+  04 May 2009; Alexis Ballier <aballier@gentoo.org> libcddb-1.3.2.ebuild:
+  run elibtoolize for freebsd
 
 *libcddb-1.3.2 (26 Apr 2009)
 
